--- a/_includes/bars/nav.html
+++ b/_includes/bars/nav.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top justify-content-between" style="background-color: #1C2331
-;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top justify-content-between" style="background-color: #=#1c2a48;">
     <a class="navbar-brand font-weight-bold" href="{{ site.baseurl }}{% link _pages/index.md %}">{{site.name}}</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarContent" >
         <span class="navbar-toggler-icon"></span>
