--- a/_includes/bars/nav.html
+++ b/_includes/bars/nav.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top justify-content-between" style="background-color: #=#1c2a48;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top justify-content-between">
+    <a class="navbar-brand" href="#">
+      <img src="assets/star.svg" width="30" height="30" alt="">
+    </a>
     <a class="navbar-brand font-weight-bold" href="{{ site.baseurl }}{% link _pages/index.md %}">{{site.name}}</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarContent" >
         <span class="navbar-toggler-icon"></span>
