--- a/_includes/bars/nav.html
+++ b/_includes/bars/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top justify-content-between">
     <a class="navbar-brand" href="#">
-      <img src="assets/star.svg" width="30" height="30" alt="">
+      <img src="assets/star.png" width="30" height="30" alt="">
     </a>
     <a class="navbar-brand font-weight-bold" href="{{ site.baseurl }}{% link _pages/index.md %}">{{site.name}}</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarContent" >
