--- a/_includes/bars/side.html
+++ b/_includes/bars/side.html
@@ -1,5 +1,5 @@
 {% if page.show_profile %}
-    <div class="card bg-light">
+    <div class="card bg-dark">
         <div class="card-body text-center">
             {{site.author.name}}
             {% include components/profile-avatar.html %}
@@ -27,4 +27,3 @@
 {% if page.path contains '_portfolio' %}
     {% include components/portfolio-meta.html %}
 {% endif %}
-
