--- a/_includes/bars/side.html
+++ b/_includes/bars/side.html
@@ -1,5 +1,5 @@
 {% if page.show_profile %}
-    <div class="card bg-dark">
+    <div class="card bg-light">
         <div class="card-body text-center">
             {{site.author.name}}
             {% include components/profile-body.html %}
